# po-director

./: .gitignore  README.md  pyproject.toml
.beads/: metadata.json
overlay/: CLAUDE-po-director.md
po_director/: __init__.py  cli.py  config.py  coordinator.py  deployments.py  gates.py  loop_audit.py  notify.py  persona.py  render.py  sheriff.py  sheriff_dispatch.py
po_director/agents/director/: prompt.md
po_director/agents/dreamer/: prompt.md
po_director/agents/improver/: prompt.md
po_director/agents/pr-sheriff/: prompt.md
po_director/agents/reflector/: prompt.md
po_director/agents/reporter/: prompt.md
po_director/agents/roadmapper/: prompt.md
scripts/: reinstall-po-env.sh
tests/: test_cli.py  test_config.py  test_flows.py  test_gates.py  test_loop_audit.py  test_persona.py  test_prompts.py  test_render_notify.py  test_rigs.py  test_sheriff.py  test_sheriff_dispatch.py
