[project]
name = "po-director"
version = "0.1.0"
description = "po formula pack: the Director — a heartbeat chief that watches its workspace, proposes software-dev work, gates on human approval, and dispatches via po."
requires-python = ">=3.11"
dependencies = [
    "prefect-orchestration",
    "prefect>=3.0",
    "typer>=0.12",
]

# ─── Entry points ── core's `po list` / `po run <name>` auto-discover these.
[project.entry-points."po.formulas"]
director-pulse = "po_director.coordinator:director_pulse"
director-reflect = "po_director.coordinator:director_reflect"
director-dream = "po_director.coordinator:director_dream"
pr-sheriff = "po_director.sheriff:pr_sheriff"

# Scheduled deployments (pulse cron + reflect cron). `po deploy` calls register().
[project.entry-points."po.deployments"]
po-director = "po_director.deployments:register"

# Utility verbs dispatched as `po director ...` (NOT `po run`).
[project.entry-points."po.commands"]
director = "po_director.cli:director"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["po_director"]

# Non-.py assets (the agent prompts) must be force-included in the wheel.
[tool.hatch.build.targets.wheel.force-include]
"po_director/agents" = "po_director/agents"

# Install alongside core during development:
#   po packs install --editable ../prefect-orchestration
#   po packs install --editable .
[tool.uv.sources]
prefect-orchestration = { path = "../prefect-orchestration", editable = true }
